# reason-ls

./: .gitignore  .spin  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  dune-project  esy.json  reason-ls.opam
.github/workflows/: ci.yml  release.yml
esy.lock/: index.json
lib/: config.re  dir.ml  dune  errors.re  utils.re
script/: install.sh  release-make-skeleton.js  release-postinstall.js
test/: dune  utils_test.re
test/Dummy/: README.md
test/_snapshots/: Integration_test_ls_tree.85d7ad44.0.snapshot
test/_snapshots/unix/: Compile_a_basic_tree.004603c0.0.snapshot  Integration_test_ls_tree.85d7ad44.0.snapshot
test/integration/: cmd_hello_test.re  cmd_main.re  dir.ml  smoke_test.re
test/support/: test_framework.re  test_runner.re  test_utils.re
