(library
 (name reason_ls_test)
 (flags -open Base -linkall -g -w -9)
 (libraries base lwt.unix rely.lib reason-ls.lib console.lib)
 (modules
  (:standard \ test_runner)))

(executable
 (name test_runner)
 (libraries base rely.lib reason_ls_test)
 (flags -open Base)
 (modules test_runner))

(rule
 (alias runtest)
 (deps
  (:m test_runner.exe))
 (action
  (run %{m} -q --color=always)))

(include_subdirs unqualified)
